# Practice-Repository

./: CMakeLists.txt  GEMINI.md  README.md  build.sh
lib/bf_lib/types/: bf_array.h
src/: main.cpp
